# learnc

./: README.md  learn_c.txt
exercises/: .gitignore  1-19.c  1-22.c  2-1.c  2-3.c  2-4.c  2-6.c  2-9.c  3-2.c  3-3.c  3-4.c  3-5.c  4-1.c  4-12.c  4-13.c  4-14.c  4-2.c  4-3.c  5-1.c  5-11.c  5-13.c  5-14.c  5-18-dcl.c  5-18-getch.c  5-18.c  5-18.h  5-2.c  5-3.c  5-4.c  5-5.c  5-7.c  5-9.c  6-2.c  6-2b.c  CMakeLists.txt  sorting.c
